docs/upbound-provider-azure/0.19/network/v1beta1/index.md
---
permalink: /upbound-provider-azure/0.19/network/v1beta1/
---

# network.v1beta1



* [applicationGateway](applicationGateway.md)
* [applicationSecurityGroup](applicationSecurityGroup.md)
* [connectionMonitor](connectionMonitor.md)
* [dDoSProtectionPlan](dDoSProtectionPlan.md)
* [dnsZone](dnsZone.md)
* [dnsaRecord](dnsaRecord.md)
* [dnsaaaaRecord](dnsaaaaRecord.md)
* [dnscaaRecord](dnscaaRecord.md)
* [dnscnameRecord](dnscnameRecord.md)
* [dnsmxRecord](dnsmxRecord.md)
* [dnsnsRecord](dnsnsRecord.md)
* [dnsptrRecord](dnsptrRecord.md)
* [dnssrvRecord](dnssrvRecord.md)
* [dnstxtRecord](dnstxtRecord.md)
* [expressRouteCircuit](expressRouteCircuit.md)
* [expressRouteCircuitAuthorization](expressRouteCircuitAuthorization.md)
* [expressRouteCircuitConnection](expressRouteCircuitConnection.md)
* [expressRouteCircuitPeering](expressRouteCircuitPeering.md)
* [expressRouteConnection](expressRouteConnection.md)
* [expressRouteGateway](expressRouteGateway.md)
* [expressRoutePort](expressRoutePort.md)
* [firewall](firewall.md)
* [firewallApplicationRuleCollection](firewallApplicationRuleCollection.md)
* [firewallNATRuleCollection](firewallNATRuleCollection.md)
* [firewallNetworkRuleCollection](firewallNetworkRuleCollection.md)
* [firewallPolicy](firewallPolicy.md)
* [firewallPolicyRuleCollectionGroup](firewallPolicyRuleCollectionGroup.md)
* [frontDoor](frontDoor.md)
* [frontdoorCustomHTTPSConfiguration](frontdoorCustomHTTPSConfiguration.md)
* [frontdoorFirewallPolicy](frontdoorFirewallPolicy.md)
* [frontdoorRulesEngine](frontdoorRulesEngine.md)
* [ipGroup](ipGroup.md)
* [loadBalancer](loadBalancer.md)
* [loadBalancerBackendAddressPool](loadBalancerBackendAddressPool.md)
* [loadBalancerBackendAddressPoolAddress](loadBalancerBackendAddressPoolAddress.md)
* [loadBalancerNatPool](loadBalancerNatPool.md)
* [loadBalancerNatRule](loadBalancerNatRule.md)
* [loadBalancerOutboundRule](loadBalancerOutboundRule.md)
* [loadBalancerProbe](loadBalancerProbe.md)
* [loadBalancerRule](loadBalancerRule.md)
* [localNetworkGateway](localNetworkGateway.md)
* [natGateway](natGateway.md)
* [natGatewayPublicIPAssociation](natGatewayPublicIPAssociation.md)
* [natGatewayPublicIPPrefixAssociation](natGatewayPublicIPPrefixAssociation.md)
* [networkInterface](networkInterface.md)
* [networkInterfaceApplicationSecurityGroupAssociation](networkInterfaceApplicationSecurityGroupAssociation.md)
* [networkInterfaceBackendAddressPoolAssociation](networkInterfaceBackendAddressPoolAssociation.md)
* [networkInterfaceNatRuleAssociation](networkInterfaceNatRuleAssociation.md)
* [networkInterfaceSecurityGroupAssociation](networkInterfaceSecurityGroupAssociation.md)
* [packetCapture](packetCapture.md)
* [pointToSiteVPNGateway](pointToSiteVPNGateway.md)
* [privateDNSAAAARecord](privateDNSAAAARecord.md)
* [privateDNSARecord](privateDNSARecord.md)
* [privateDNSCNAMERecord](privateDNSCNAMERecord.md)
* [privateDNSMXRecord](privateDNSMXRecord.md)
* [privateDNSPTRRecord](privateDNSPTRRecord.md)
* [privateDNSSRVRecord](privateDNSSRVRecord.md)
* [privateDNSTXTRecord](privateDNSTXTRecord.md)
* [privateDNSZone](privateDNSZone.md)
* [privateDNSZoneVirtualNetworkLink](privateDNSZoneVirtualNetworkLink.md)
* [privateEndpoint](privateEndpoint.md)
* [privateLinkService](privateLinkService.md)
* [profile](profile.md)
* [publicIP](publicIP.md)
* [publicIPPrefix](publicIPPrefix.md)
* [routeTable](routeTable.md)
* [securityGroup](securityGroup.md)
* [securityRule](securityRule.md)
* [subnet](subnet.md)
* [subnetNATGatewayAssociation](subnetNATGatewayAssociation.md)
* [subnetNetworkSecurityGroupAssociation](subnetNetworkSecurityGroupAssociation.md)
* [subnetRouteTableAssociation](subnetRouteTableAssociation.md)
* [subnetServiceEndpointStoragePolicy](subnetServiceEndpointStoragePolicy.md)
* [virtualHub](virtualHub.md)
* [virtualNetwork](virtualNetwork.md)
* [virtualNetworkGateway](virtualNetworkGateway.md)
* [virtualNetworkGatewayConnection](virtualNetworkGatewayConnection.md)
* [virtualNetworkPeering](virtualNetworkPeering.md)
* [virtualWAN](virtualWAN.md)
* [vpnServerConfiguration](vpnServerConfiguration.md)
* [watcher](watcher.md)
* [watcherFlowLog](watcherFlowLog.md)